Support background tinting on AppCompatToggleButton
Align with the rest of AppCompat widgets. Add a new screen
in the demo app and test coverage.

Also add @Nullable annotation to all overriden setBackgroundDrawable
methods.

Test: ./gradlew appcompat:appcompat:connectedCheck --info --daemon -Pandroid.testInstrumentationRunnerArguments.class=androidx.appcompat.widget.AppCompatToggleButtonTest
Bug: 157676005
Change-Id: I678df300077418a4eead99ab83e89840f532a4f8

--- a/appcompat/appcompat/src/androidTest/res/layout/appcompat_button_activity.xml
+++ b/appcompat/appcompat/src/androidTest/res/layout/appcompat_button_activity.xml
@@ -63,7 +63,7 @@
             app:backgroundTintMode="src_in"
             android:focusable="false" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/view_tinted_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
