--- a/appcompat/appcompat/src/androidTest/res/layout/appcompat_togglebutton_activity.xml
+++ b/appcompat/appcompat/src/androidTest/res/layout/appcompat_togglebutton_activity.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2018 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2018 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,19 +13,60 @@
      limitations under the License.
 -->
 
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <View
+        android:id="@+id/for_focus"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="4dp"
+        android:focusable="true" />
 
     <androidx.appcompat.widget.AppCompatToggleButton
-            android:id="@+id/togglebutton_fontresource"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sample_text1"
-            app:fontFamily="@font/samplefont" />
+        android:id="@+id/view_tinted_no_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        app:backgroundTint="@color/color_state_list_lilac"
+        app:backgroundTintMode="src_in" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/view_tinted_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/test_drawable"
+        android:focusable="false"
+        app:backgroundTint="@color/color_state_list_lilac"
+        app:backgroundTintMode="src_in" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/view_untinted_no_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="false" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/view_untinted_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/test_background_green"
+        android:focusable="false" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/button_untinted"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="false" />
+
+    <androidx.appcompat.widget.AppCompatToggleButton
+        android:id="@+id/togglebutton_fontresource"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sample_text1"
+        app:fontFamily="@font/samplefont" />
 
 </LinearLayout>
