--- a/samples/Support7Demos/src/main/res/color/background_tint2.xml
+++ b/samples/Support7Demos/src/main/res/color/background_tint2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Copyright 2019 The Android Open Source Project
+  Copyright 2020 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -15,7 +15,7 @@
   limitations under the License.
   -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="#00E000"/>
-    <item android:state_enabled="false" android:alpha="0.5" android:color="#00FF00"/>
-    <item android:color="#00FF00"/>
+    <item android:state_pressed="true" android:color="#CE897B"/>
+    <item android:state_enabled="false" android:alpha="0.5" android:color="#FFCBA4"/>
+    <item android:color="#FFCBA4"/>
 </selector>
