Backporting of WindowInsetsAnimationCallback
The backport targets API >= 21 and uses View.onApplyWindowInsetListener
to replicate the behavior of the platform WindowInsetsAnimationCallback.

Test: WindowInsetsAnimationCompatActivityTest
Change-Id: Id468096a6858b73f8b296337f4cadd15c00e6b58

--- a/samples/Support4Demos/src/main/res/layout/activity_insets_controller.xml
+++ b/samples/Support4Demos/src/main/res/layout/activity_insets_controller.xml
@@ -21,6 +21,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:id="@+id/root"
+    tools:ignore="HardcodedText"
     tools:targetApi="lollipop">
 
     <Toolbar
@@ -57,8 +58,21 @@
         android:layout_height="wrap_content"
         android:text="setDecorFitsSystemWindows" />
 
+    <CheckBox
+        android:id="@+id/isDecorView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="On Decor View" />
+
     <TextView
         android:id="@+id/visibility"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
