Replace `addView` with inflation of view stubs.
This code change does not allow changing the structure of the App Widget
anymore. We will need to udpate this once we can store the state.

Test: ./gradlew :glance:glance-appwidget:test
Test: ./gradlew :glance:glance-appwidget:connectedAndroidTest
Test: ./gradlew :glance:glance-appwidget:integration-tests:demos:installDebug
Relnote: n/a
Bug: 202868171
Change-Id: Icb69723f81e1ddc6355dad1c972b9b693e97ebe9

--- a/glance/glance-appwidget/src/androidMain/res/layout/button.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/button.xml
@@ -14,5 +14,7 @@
   limitations under the License.
   -->
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:scaleType="fitXY" />
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    style="@style/Glance.AppWidget.Button"/>
