--- a/glance/glance-appwidget/src/androidMain/res/layout/check_box.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/check_box.xml
@@ -14,6 +14,8 @@
   limitations under the License.
   -->
 
-<Switch xmlns:android="http://schemas.android.com/apk/res/android"
+<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:textDirection="locale"
-    style="@style/Glance.AppWidget.Switch"/>
+    style="@style/Glance.AppWidget.CheckBox"/>
