--- a/glance/glance-appwidget/src/androidMain/res/layout/deleted_view.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/deleted_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2021 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,4 +14,8 @@
   limitations under the License.
   -->
 
-<FrameLayout />
+<ViewStub xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:visibility="gone"
+    android:layout="@layout/text" />
