--- a/glance/glance-appwidget/src/androidMain/res/layout/image_crop.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/image_crop.xml
@@ -15,4 +15,6 @@
   -->
 
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-   android:scaleType="fitCenter" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scaleType="centerCrop" />
