--- a/glance/glance-appwidget/src/androidMain/res/layout/image_fill_bounds.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/image_fill_bounds.xml
@@ -14,6 +14,7 @@
   limitations under the License.
   -->
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:textDirection="locale"
-    style="@style/Glance.AppWidget.Text"/>
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scaleType="fitXY" />
