--- a/glance/glance-appwidget/src/androidMain/res/layout/list.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/list.xml
@@ -14,6 +14,8 @@
   limitations under the License.
   -->
 
-<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
-    android:textDirection="locale"
-    style="@style/Glance.AppWidget.CheckBox"/>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:divider="@null"
+    style="@style/Glance.AppWidget.List"/>
