--- a/glance/glance-appwidget/src/androidMain/res/layout/swtch.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/swtch.xml
@@ -14,6 +14,8 @@
   limitations under the License.
   -->
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:divider="@null"
-    style="@style/Glance.AppWidget.List"/>
+<Switch xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textDirection="locale"
+    style="@style/Glance.AppWidget.Switch"/>
