--- a/wear/watchface/watchface-samples-minimal-complications/src/main/res/xml/xml_watchface.xml
+++ b/wear/watchface/watchface-samples-minimal-complications/src/main/res/xml/xml_watchface.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2021 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,11 +13,14 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="androidx.wear.watchface.guava.test">
-    <application android:requestLegacyExternalStorage="true">
-        <service android:name="androidx.wear.watchface.test.WatchFaceControlTestService"/>
-    </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-</manifest>
+<XmlWatchFace xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ComplicationSlot
+        app:slotId="1"
+        app:boundsType="ROUND_RECT"
+        app:supportedTypes="SHORT_TEXT|RANGED_VALUE|SMALL_IMAGE"
+        app:defaultDataSourceType="RANGED_VALUE"
+        app:systemDataSourceFallback="DATA_SOURCE_WATCH_BATTERY">
+        <ComplicationSlotBounds app:left="0.3" app:top="0.7" app:right="0.7" app:bottom="0.9"/>
+    </ComplicationSlot>
+</XmlWatchFace>
