--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/values-v29/styles.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/values-v29/styles.xml
@@ -15,23 +15,9 @@
   -->
 
 <resources>
-    <style name="TextAppearance.Title" parent="">
-        <item name="android:textSize">15sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="Glance.AppWidget.Column" parent="">
-        <item name="android:background">@color/default_widget_background</item>
-    </style>
-
-    <style name="Glance.ErrorUi.TitleAppearance" parent="">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:fontFamily">sans-serif</item>
-    </style>
     <style name="Glance.ErrorUi.MainTextAppearance" parent="">
         <item name="android:textSize">15sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textFontWeight">500</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
 </resources>
