Add basic Extensions Validation functions into the test app
- [Menu] A menu item to switch to validation tool
- [Menu] A menu item to reset the test results
- [CameraValidationResultActivity] An activity contains the validation results of all cameras retrieved from CameraX’s camera repository.
- [ExtensionValidationResultActivity] An activity contains the validation results of all extension modes.
- [ImageValidationActivity] An activity supports to show the captured image and provides Passed/Failed/Recapture buttons.
- [ImageCaptureActivity] An activity supports to capture an image for specified extension mode.
- The validation results should be cached and will be restored when the app is launched again.

Bug: 206923668
Test: manual test
Change-Id: Ia34c5e4a89da691b344850395a6aa2b505b21f2c

--- a/camera/integration-tests/extensionstestapp/src/main/res/menu/main_menu.xml
+++ b/camera/integration-tests/extensionstestapp/src/main/res/menu/main_menu.xml
@@ -1,5 +1,5 @@
-<!--
-  Copyright 2019 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!--
+  Copyright 2021 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -14,8 +14,8 @@
   limitations under the License.
   -->
 
-<resources>
-    <string name="extensions_app">Extensions App</string>
-    <string name="extensions_validator">Extensions Validator</string>
-    <string name="error_msg_no_camera_support_extension">No camera supports any extension modes!</string>
-</resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menu_validation_tool"
+        android:title="Validation Tool" />
+</menu>
