--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/layout/updating_widget_preview.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/layout/updating_widget_preview.xml
@@ -25,10 +25,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/updating_title_a"
+        android:text="@string/updating_title"
         android:textAppearance="@style/TextAppearance.Title"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "Toggle title" />
+        android:text = "Show image" />
 </LinearLayout>
