--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/color/my_checkbox_colors.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/color/my_checkbox_colors.xml
@@ -14,9 +14,7 @@
   limitations under the License.
   -->
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="32dp"
-    android:layout_height="32dp"
-    android:src="@drawable/abc_btn_check_material_anim_enabled"
-    android:layout_centerVertical="true"
-    style="@style/Glance.AppWidget.CheckBoxIcon"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true" android:color="#FFFF00"/>
+    <item android:color="#8800FF"/>
+</selector>
