--- a/wear/watchface/watchface-client/src/androidTest/res/xml/xml_watchface.xml
+++ b/wear/watchface/watchface-client/src/androidTest/res/xml/xml_watchface.xml
@@ -34,17 +34,22 @@
         app:slotId="10"
         app:boundsType="ROUND_RECT"
         app:supportedTypes="SHORT_TEXT|RANGED_VALUE|SMALL_IMAGE"
-        app:defaultDataSourceType="RANGED_VALUE"
-        app:systemDataSourceFallback="DATA_SOURCE_WATCH_BATTERY">
+        app:primaryDataSource="com.app.example1/com.app.example1.Class"
+        app:primaryDataSourceDefaultType="SHORT_TEXT"
+        app:secondaryDataSource="com.app.example2/com.app.example2.Class"
+        app:secondaryDataSourceDefaultType="SMALL_IMAGE"
+        app:systemDataSourceFallback="DATA_SOURCE_WATCH_BATTERY"
+        app:systemDataSourceFallbackDefaultType="RANGED_VALUE">
         <ComplicationSlotBounds app:left="0.3" app:top="0.7" app:right="0.7" app:bottom="0.9"/>
     </ComplicationSlot>
     <ComplicationSlot
         app:slotId="20"
         app:boundsType="BACKGROUND"
-        app:supportedTypes="LONG_TEXT"
-        app:defaultDataSourceType="LONG_TEXT"
+        app:supportedTypes="PHOTO_IMAGE"
         app:primaryDataSource="com.package/com.app"
-        app:systemDataSourceFallback="DATA_SOURCE_SUNRISE_SUNSET">
+        app:primaryDataSourceDefaultType="PHOTO_IMAGE"
+        app:systemDataSourceFallback="DATA_SOURCE_SUNRISE_SUNSET"
+        app:systemDataSourceFallbackDefaultType="PHOTO_IMAGE">
         <ComplicationSlotBounds app:left="0.1" app:top="0.2" app:right="0.3" app:bottom="0.4"/>
     </ComplicationSlot>
 </XmlWatchFace>
