--- a/wear/watchface/watchface-samples-minimal-complications/src/main/res/xml/xml_watchface.xml
+++ b/wear/watchface/watchface-samples-minimal-complications/src/main/res/xml/xml_watchface.xml
@@ -19,8 +19,8 @@
         app:slotId="1"
         app:boundsType="ROUND_RECT"
         app:supportedTypes="SHORT_TEXT|RANGED_VALUE|SMALL_IMAGE"
-        app:defaultDataSourceType="RANGED_VALUE"
-        app:systemDataSourceFallback="DATA_SOURCE_WATCH_BATTERY">
+        app:systemDataSourceFallback="DATA_SOURCE_WATCH_BATTERY"
+        app:systemDataSourceFallbackDefaultType="RANGED_VALUE">
         <ComplicationSlotBounds app:left="0.3" app:top="0.7" app:right="0.7" app:bottom="0.9"/>
     </ComplicationSlot>
 </XmlWatchFace>
