Add animations for Switch backport
This change adds animations for the Switch backport view using an
<animated-selector/>.

Test: ./gradlew
 glance:glance-appwidget:integration-tests:demos:installDebug
Test: Use CheckBox Widget

Change-Id: I05e774fafceff607e6a67b35e4225ea72e705edb

--- a/glance/glance-appwidget/src/androidMain/res/layout/switch_track.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/switch_track.xml
@@ -14,6 +14,8 @@
   limitations under the License.
   -->
 
-<inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/abc_btn_switch_to_on_mtrl_00012"
-    android:insetRight="18dp"/>
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="42dp"
+    android:layout_height="28dp"
+    android:src="@drawable/switch_track"
+    style="@style/Glance.AppWidget.SwitchTrack"/>
