--- a/glance/glance-appwidget/src/androidMain/res/layout/switch_thumb.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/switch_thumb.xml
@@ -15,7 +15,8 @@
   -->
 
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="42dp"
-    android:layout_height="28dp"
-    android:src="@drawable/switch_track_material"
-    style="@style/Glance.AppWidget.SwitchTrack"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|start"
+    android:src="@drawable/switch_thumb_animated"
+    style="@style/Glance.AppWidget.SwitchThumb"/>
