--- a/glance/glance-appwidget/src/androidMain/res/values/styles.xml
+++ b/glance/glance-appwidget/src/androidMain/res/values/styles.xml
@@ -15,6 +15,22 @@
   -->
 
 <resources>
+    <style name="Glance.AppWidget.Box" parent=""/>
+    <style name="Glance.AppWidget.Button" parent=""/>
+    <style name="Glance.AppWidget.CheckBox" parent=""/>
+    <style name="Glance.AppWidget.CheckBoxBackport" parent=""/>
+    <style name="Glance.AppWidget.CheckBoxIcon" parent=""/>
+    <style name="Glance.AppWidget.CheckBoxText" parent=""/>
+    <style name="Glance.AppWidget.Column" parent=""/>
+    <style name="Glance.AppWidget.List" parent=""/>
+    <style name="Glance.AppWidget.Row" parent=""/>
+    <style name="Glance.AppWidget.Switch" parent=""/>
+    <style name="Glance.AppWidget.SwitchBackport" parent=""/>
+    <style name="Glance.AppWidget.SwitchText" parent=""/>
+    <style name="Glance.AppWidget.SwitchThumb" parent=""/>
+    <style name="Glance.AppWidget.SwitchTrack" parent=""/>
+    <style name="Glance.AppWidget.Text" parent=""/>
+
     <style name="Widget.Glance.AppWidget.ErrorBackground"
         parent="Widget.Glance.AppWidget.ErrorBackground.Base">
         <item name="android:id">@android:id/background</item>
