Add support for switch colors
Bug: 201783875
Test: demo, robolectric, scuba
Relnote: n/a
Change-Id: I6522548fa96b67fec67d37dbba6d0d08d8f77a74

--- a/glance/glance-appwidget/src/androidMain/res/drawable/switch_track_material.xml
+++ b/glance/glance-appwidget/src/androidMain/res/drawable/switch_track_material.xml
@@ -18,8 +18,7 @@
     <item android:gravity="center_vertical|fill_horizontal"
         android:start="4dp"
         android:end="4dp">
-        <shape android:shape="rectangle"
-            android:tint="@color/switch_track_material">
+        <shape android:shape="rectangle">
             <corners android:radius="7dp" />
             <solid android:color="@color/white_disabled_material_anim" />
             <size android:height="14dp" />
