--- a/glance/glance-appwidget/src/androidMain/res/color/glance_default_switch_track.xml
+++ b/glance/glance-appwidget/src/androidMain/res/color/glance_default_switch_track.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   Copyright 2021 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,9 +15,7 @@
   limitations under the License.
   -->
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|start"
-    android:src="@drawable/switch_thumb_material"
-    style="@style/Glance.AppWidget.SwitchThumb"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true" android:color="?android:attr/colorControlActivated" />
+    <item android:color="?android:attr/colorForeground" />
+</selector>
