Simplify and clean up demos
To reduce maintainability and simplify the demo creation remove all non-glance specific or required setup.

- Create loading_layout.xml to use as initialLayout
- Align styles
- Create default_app_widget_info.xml to be used for demos
- Remove other unnecessary files

Bug: 203033699
Test: manual
Change-Id: I62511ef43d2c107083e8dde5e683035a87fda004

--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/xml/default_app_widget_info.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/xml/default_app_widget_info.xml
@@ -17,7 +17,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="100dp"
     android:minHeight="100dp"
-    android:initialLayout="@layout/empty_layout"
+    android:initialLayout="@layout/loading_layout"
+    android:minResizeHeight="40dp"
+    android:minResizeWidth="40dp"
+    android:previewImage="@drawable/compose"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
-</appwidget-provider>
+    android:widgetCategory="home_screen" />
