--- a/glance/glance-appwidget/src/androidMain/res/layout/glance_error_layout.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/glance_error_layout.xml
@@ -15,7 +15,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.Glance.AppWidget.ErrorBackground"
+    style="@style/Glance.AppWidget.Background.Error"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
