--- a/glance/glance-appwidget/integration-tests/demos/src/main/res/xml/action_app_widget_info.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/res/xml/action_app_widget_info.xml
@@ -17,7 +17,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="180dp"
     android:minHeight="180dp"
-    android:initialLayout="@layout/empty_layout"
+    android:initialLayout="@layout/loading_layout"
+    android:previewImage="@drawable/compose"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
