--- a/glance/glance-appwidget/src/androidMain/res/drawable-v31/loading_layout_background.xml
+++ b/glance/glance-appwidget/src/androidMain/res/drawable-v31/loading_layout_background.xml
@@ -14,12 +14,8 @@
   limitations under the License.
   -->
 
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size
-        android:width="50dp"
-        android:height="50dp" />
-    <solid
-        android:color="#AABBCC" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="@android:dimen/system_app_widget_background_radius" />
+    <solid android:color="?android:attr/colorBackground" />
 </shape>
