--- a/glance/glance-appwidget/src/androidMain/res/drawable/loading_layout_background.xml
+++ b/glance/glance-appwidget/src/androidMain/res/drawable/loading_layout_background.xml
@@ -14,10 +14,8 @@
   limitations under the License.
   -->
 
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="100dp"
-    android:minHeight="100dp"
-    android:initialLayout="@layout/empty_layout"
-    android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
-</appwidget-provider>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="8dp" />
+    <solid android:color="?android:attr/colorBackground" />
+</shape>
