--- a/glance/glance-appwidget/src/androidMain/res/layout/loading_layout.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/loading_layout.xml
@@ -14,13 +14,14 @@
   limitations under the License.
   -->
 
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="100dp"
-    android:minHeight="100dp"
-    android:minResizeWidth="40dp"
-    android:minResizeHeight="40dp"
-    android:initialLayout="@layout/empty_layout"
-    android:previewImage="@drawable/compound_button_preview_image"
-    android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen">
-</appwidget-provider>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Glance.AppWidget.Background.Loading"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true" />
+</FrameLayout>
