Add default glance app widget theme
Test: Locally running demo widgets
Change-Id: Ia318def800da6cf7f7f9bc9a7437cec406be55cd
Relnote: n/a
Bug: 202320075

--- a/glance/glance-appwidget/src/main/res/values/themes.xml
+++ b/glance/glance-appwidget/src/main/res/values/themes.xml
@@ -15,8 +15,5 @@
   -->
 
 <resources>
-    <style name="Theme.TestDimensionAttr" parent="">
-        <item name="dimensionAttr">@dimen/testDimension</item>
-    </style>
-    <style name="Glance.AppWidget.Theme" parent=""/>
+    <style name="Glance.AppWidget.Theme" parent="android:Theme.DeviceDefault"/>
 </resources>
