Add viewpager2 + compose interop demo.
This CL adds a demo to demonstrate interoperability between viewpager2 and compose (or lack of thereof).

Bug: n/a
Test: DemoTest
Change-Id: I4357defaa56d22689d0c4364701bfa3f41cd3910

--- a/compose/ui/ui/integration-tests/ui-demos/src/main/res/layout/compose_in_android_scroll_horizontal_pager.xml
+++ b/compose/ui/ui/integration-tests/ui-demos/src/main/res/layout/compose_in_android_scroll_horizontal_pager.xml
@@ -31,13 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"/>
 
-    <RelativeLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/container"
-            android:layout_width="360dp"
-            android:layout_height="360dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:orientation="horizontal" />
 </LinearLayout>
