--- a/compose/ui/ui/integration-tests/ui-demos/src/main/res/layout/pager_item.xml
+++ b/compose/ui/ui/integration-tests/ui-demos/src/main/res/layout/pager_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  Copyright 2020 The Android Open Source Project
+  Copyright 2021 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -15,29 +15,20 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"/>
+        android:textSize="31sp"/>
 
-    <TextView
-        android:id="@+id/text2"
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"/>
+        />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/container"
-            android:layout_width="360dp"
-            android:layout_height="360dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
 </LinearLayout>
