Add emulator test for onCheckedChange actions
This changes adds a test to GlanceAppWidgetReceiverTest to verify the
functionality of onCheckedChange actions for CheckBox and Switch
composables. The test clicks the compound buttons then verifies that
their toggled state is passed to the triggered action.

Bug: 207647588
Test: ./gradlew :glance:glance-appwidget:cAT -Pandroid.testInstrumentationRunnerArguments.class=androidx.glance.appwidget.GlanceAppWidgetReceiverTest
Change-Id: I34e7bcd872bfb81ab45b523b68d222a1ee2a3323

--- a/glance/glance-appwidget/src/androidMain/res/layout/swtch.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/swtch.xml
@@ -15,6 +15,7 @@
   -->
 
 <Switch xmlns:android="http://schemas.android.com/apk/res/android"
+    android:tag="glanceCompoundButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textDirection="locale"
