--- a/glance/glance-appwidget/src/androidMain/res/layout/check_box_backport.xml
+++ b/glance/glance-appwidget/src/androidMain/res/layout/check_box_backport.xml
@@ -15,6 +15,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:tag="glanceCompoundButton"
     style="@style/Glance.AppWidget.CheckBoxBackport"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
