Don't wrap NumberKeyListeners for emoji
All subclasses of NumberKeyListener do not allow emoji to be input, and
wrapping them breaks locale setting inside of TextView, which is visible
as a change in input filtering behavior.

Fixes: b/207119921
Relnote: "Fixes issue with all NumberKeyListener subclasses introduced
in appcompat 1.4.0 that allowed unexpected characters such as
punctuation to be input (b/207119921)"
Test: Manual & ./gradlew :appc:appc:cAT

Change-Id: Iede7af5e0599d29fd4cee78a798d5bcb07e1ab97

--- a/appcompat/appcompat/src/androidTest/res/layout/appcompat_edittext_emoji_activity.xml
+++ b/appcompat/appcompat/src/androidTest/res/layout/appcompat_edittext_emoji_activity.xml
@@ -65,5 +65,13 @@
             android:digits="01234"
             />
 
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/text_with_digits_and_comma"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:digits="01234,"
+            />
+
     </LinearLayout>
 </ScrollView>
